--- a/notebooks/data_transformation.ipynb
+++ b/notebooks/data_transformation.ipynb
@@ -103,15 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class DataTransformation:\n",
     "    def __init__(self, config: DataTransformationConfig):\n",
     "        self.config = config\n",
     "        \n",
-    "    def feature_eng(self, data):\n",
+    "    def feature_eng(self):\n",
+    "        data = pd.read_csv(self.config.data_path)\n",
     "        data.replace('NaN', float(np.nan), regex=True, inplace=True)\n",
     "        data['Weatherconditions']=data['Weatherconditions'].str.split(\" \", expand=True)[1]\n",
     "        data['Time_taken(min)']=data['Time_taken(min)'].str.split(\" \", expand=True)[1]\n",
@@ -173,12 +175,11 @@
     "    \n",
     "    \n",
     "    def convert(self):\n",
-    "        df = pd.read_csv(self.config.data_path)\n",
-    "        feat = self.feature_eng(df)\n",
+    "        feat = self.feature_eng()\n",
     "        dist = self.distance(feat)\n",
     "        nul = self.fill_na(dist)\n",
     "        cat = self.cat_values(nul)\n",
-    "        cat.to_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final Dataset.csv\")\n",
+    "        cat.to_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final Dataset.csv\", index=False)\n",
     "        \n",
     "            \n",
     "        "
@@ -186,17 +187,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-18 17:54:44,390: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
-      "[2023-08-18 17:54:44,405: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
-      "[2023-08-18 17:54:44,405: INFO: __init__: Directory created at: artifacts]\n",
-      "[2023-08-18 17:54:44,405: INFO: __init__: Directory created at: artifacts/data_ingestion]\n"
+      "[2023-08-21 14:23:35,608: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
+      "[2023-08-21 14:23:35,610: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
+      "[2023-08-21 14:23:35,611: INFO: __init__: Directory created at: artifacts]\n",
+      "[2023-08-21 14:23:35,612: INFO: __init__: Directory created at: artifacts/data_ingestion]\n"
      ]
     }
    ],
@@ -209,6 +210,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
