data transformation and model trainer

--- a/notebooks/data_transformation.ipynb
+++ b/notebooks/data_transformation.ipynb
@@ -42,7 +42,9 @@
     "@dataclass(frozen=True)\n",
     "class DataTransformationConfig:\n",
     "    root_dir: Path\n",
-    "    data_path: Path\n",
+    "    train_path: Path\n",
+    "    test_path: Path\n",
+    "    preprocessor_model_path: Path\n",
     "    "
    ]
   },
@@ -82,7 +84,9 @@
     "\n",
     "        data_transformation_config = DataTransformationConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            data_path=config.data_path\n",
+    "            train_path=config.train_path,\n",
+    "            test_path=config.test_path,\n",
+    "            preprocessor_model_path=config.preprocessor_model_path\n",
     "        )\n",
     "\n",
     "        return data_transformation_config"
@@ -96,14 +100,21 @@
    "source": [
     "import os\n",
     "from src.logging import logger\n",
-    "import geopy.distance\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import geopy.distance\n",
+    "import pickle\n",
+    "\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,73 +124,119 @@
     "        self.config = config\n",
     "        \n",
     "    def feature_eng(self):\n",
-    "        data = pd.read_csv(self.config.data_path)\n",
-    "        data.replace('NaN', float(np.nan), regex=True, inplace=True)\n",
-    "        data['Weatherconditions']=data['Weatherconditions'].str.split(\" \", expand=True)[1]\n",
-    "        data['Time_taken(min)']=data['Time_taken(min)'].str.split(\" \", expand=True)[1]\n",
+    "        train = pd.read_csv(self.config.train_path)\n",
+    "        test = pd.read_csv(self.config.test_path)\n",
     "        \n",
+    "        \n",
+    "        train.replace('NaN', float(np.nan), regex=True, inplace=True)\n",
+    "        test.replace('NaN', float(np.nan), regex=True, inplace=True)\n",
+    "        \n",
+    "        train['Weatherconditions']=train['Weatherconditions'].str.split(\" \", expand=True)[1]\n",
+    "        train['Time_taken(min)']=train['Time_taken(min)'].str.split(\" \", expand=True)[1]\n",
+    "        \n",
+    "        test['Weatherconditions']=test['Weatherconditions'].str.split(\" \", expand=True)[1]\n",
     "        \n",
     "        num_cols = ['Delivery_person_Age','Delivery_person_Ratings','Restaurant_latitude','Restaurant_longitude',\n",
     "            'Delivery_location_latitude','Delivery_location_longitude','Vehicle_condition','multiple_deliveries',\n",
     "            'Time_taken(min)']\n",
     "        for col in num_cols:\n",
-    "            data[col]=data[col].astype('float64')\n",
-    "        \n",
-    "        return data\n",
+    "            train[col]=train[col].astype('float64')\n",
     "            \n",
-    "    def distance(self, data):\n",
-    "    \n",
-    "        data['Restaurant_latitude'] = data['Restaurant_latitude'].abs()\n",
-    "        data['Restaurant_longitude'] = data['Restaurant_longitude'].abs()\n",
+    "        for col in num_cols[:-1]:\n",
+    "            test[col]=test[col].astype('float64')\n",
     "        \n",
-    "        restaurant_coordinates = data[['Restaurant_latitude', 'Restaurant_longitude']].to_numpy()\n",
-    "        delivery_location_coordinates = data[['Delivery_location_latitude', 'Delivery_location_longitude']].to_numpy()\n",
+    "        \n",
+    "        return train, test\n",
+    "            \n",
+    "    def distance(self, train, test):\n",
+    "    \n",
+    "        train['Restaurant_latitude'] = train['Restaurant_latitude'].abs()\n",
+    "        train['Restaurant_longitude'] = train['Restaurant_longitude'].abs()\n",
+    "        \n",
+    "        restaurant_coordinates = train[['Restaurant_latitude', 'Restaurant_longitude']].to_numpy()\n",
+    "        delivery_location_coordinates = train[['Delivery_location_latitude', 'Delivery_location_longitude']].to_numpy()\n",
     "        \n",
     "        Distance = []\n",
-    "        for i in range(len(data)):\n",
+    "        for i in range(len(train)):\n",
     "            dist = geopy.distance.geodesic(restaurant_coordinates[i], delivery_location_coordinates[i]).km\n",
     "            Distance.append(dist)\n",
     "\n",
-    "        data['Distance(kms)'] = Distance\n",
+    "        train['Distance'] = Distance\n",
     "        \n",
-    "        return data\n",
+    "        test['Restaurant_latitude'] = test['Restaurant_latitude'].abs()\n",
+    "        test['Restaurant_longitude'] = test['Restaurant_longitude'].abs()\n",
+    "        \n",
+    "        restaurant_coordinates = test[['Restaurant_latitude', 'Restaurant_longitude']].to_numpy()\n",
+    "        delivery_location_coordinates = test[['Delivery_location_latitude', 'Delivery_location_longitude']].to_numpy()\n",
+    "        \n",
+    "        Distance = []\n",
+    "        for i in range(len(test)):\n",
+    "            dist = geopy.distance.geodesic(restaurant_coordinates[i], delivery_location_coordinates[i]).km\n",
+    "            Distance.append(dist)\n",
     "\n",
-    "    def fill_na(self, data):\n",
+    "        test['Distance'] = Distance\n",
     "        \n",
-    "        data['Delivery_person_Age'].fillna(29, inplace=True) \n",
-    "        data['Delivery_person_Ratings'].fillna(4.5, inplace=True)\n",
-    "        data['Weatherconditions'].fillna('Sunny', inplace=True)\n",
-    "        data['Road_traffic_density'].fillna('Low', inplace=True)\n",
-    "        data['multiple_deliveries'].fillna(1.0, inplace=True)\n",
-    "        data['Festival'].fillna('No', inplace=True)\n",
-    "        data['City'].fillna('Metropolitian', inplace=True)\n",
-    "        \n",
-    "        data.drop(['ID', 'Delivery_person_ID', 'Time_Orderd','Time_Order_picked', 'Restaurant_latitude',\n",
+    "        drop_cols = ['ID', 'Delivery_person_ID', 'Time_Orderd','Time_Order_picked', 'Restaurant_latitude',\n",
     "            'Restaurant_longitude','Delivery_location_latitude', 'Delivery_location_longitude',\n",
-    "            'Order_Date'],axis=1,inplace=True)\n",
+    "            'Order_Date']\n",
     "        \n",
-    "        return data\n",
+    "        train.drop(drop_cols, axis=1, inplace=True)\n",
+    "        test.drop(drop_cols, axis=1, inplace=True)\n",
+    "        \n",
+    "        train.to_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final_train.csv\", index=False)\n",
+    "        test.to_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final_test.csv\", index=False)\n",
+    "        return train, test\n",
     "\n",
-    "    def cat_values(self, data):\n",
+    "    def data_transformer(self):\n",
+    "        categorical_columns = ['Type_of_order','Type_of_vehicle','Festival','City',\n",
+    "                               'Road_traffic_density', 'Weatherconditions']\n",
     "        \n",
-    "        Road_encodes = {'Low ': 0, 'Medium ': 1, 'High ': 2, 'Jam ': 3, 'Low':0}\n",
-    "        Weather_encodes = {'Sunny': 0,'Cloudy': 1, 'Windy': 2, 'Fog': 3, 'Stormy': 4, 'Sandstorms': 5}\n",
-    "    \n",
-    "        data['Road_traffic_density'] = data['Road_traffic_density'].replace(Road_encodes)\n",
-    "        data['Weatherconditions'] = data['Weatherconditions'].replace(Weather_encodes)\n",
+    "        numerical_columns=['Delivery_person_Age','Delivery_person_Ratings','Vehicle_condition',\n",
+    "                              'multiple_deliveries','Distance']\n",
+    "\n",
+    "        # Numerical pipeline\n",
+    "        numerical_pipeline = Pipeline(steps = [\n",
+    "            ('impute', SimpleImputer(strategy = 'constant', fill_value=0)),\n",
+    "            ('scaler', StandardScaler(with_mean=False))\n",
+    "        ])\n",
+    "\n",
+    "        # Categorical Pipeline\n",
+    "        categorical_pipeline = Pipeline(steps = [\n",
+    "            ('impute', SimpleImputer(strategy = 'most_frequent')),\n",
+    "            ('onehot', OneHotEncoder(handle_unknown = 'ignore')),\n",
+    "            ('scaler', StandardScaler(with_mean=False))\n",
+    "        ])\n",
+    "\n",
+    "        preprocessor = ColumnTransformer([\n",
+    "            ('numerical_pipeline', numerical_pipeline,numerical_columns),\n",
+    "            ('categorical_pipeline', categorical_pipeline,categorical_columns)\n",
+    "        ])\n",
     "        \n",
-    "        categorical_columns = [feature for feature in data.columns if data[feature].dtypes == \"O\"]\n",
-    "        data = pd.get_dummies(data, columns=categorical_columns, drop_first=True, dtype=int)\n",
+    "        return preprocessor\n",
     "        \n",
-    "        return data\n",
     "    \n",
+    "    def initiate_data_transformation(self):\n",
+    "        train, test = self.feature_eng()\n",
+    "        self.distance(train, test)\n",
+    "        preprocessor = self.data_transformer()\n",
+    "        \n",
+    "        \n",
     "    \n",
-    "    def convert(self):\n",
-    "        feat = self.feature_eng()\n",
-    "        dist = self.distance(feat)\n",
-    "        nul = self.fill_na(dist)\n",
-    "        cat = self.cat_values(nul)\n",
-    "        cat.to_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final Dataset.csv\", index=False)\n",
+    "        X_train = train.drop('Time_taken(min)', axis = 1)\n",
+    "        X_test = test\n",
+    "        y_train = train['Time_taken(min)']\n",
+    "        \n",
+    "        \n",
+    "        X_train = preprocessor.fit_transform(X_train)\n",
+    "        X_test = preprocessor.transform(X_test)\n",
+    "        \n",
+    "        preprocessor_path = self.config.preprocessor_model_path\n",
+    "        \n",
+    "        logger.info(f\"Saving preprocessor pickle file at {preprocessor_path}\")\n",
+    "        \n",
+    "        with open(preprocessor_path, 'wb') as file:\n",
+    "            pickle.dump(preprocessor, file)\n",
+    "    \n",
     "        \n",
     "            \n",
     "        "
@@ -187,17 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-21 14:23:35,608: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
-      "[2023-08-21 14:23:35,610: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
-      "[2023-08-21 14:23:35,611: INFO: __init__: Directory created at: artifacts]\n",
-      "[2023-08-21 14:23:35,612: INFO: __init__: Directory created at: artifacts/data_ingestion]\n"
+      "[2023-08-22 20:45:21,521: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
+      "[2023-08-22 20:45:21,524: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
+      "[2023-08-22 20:45:21,526: INFO: __init__: Directory created at: artifacts]\n",
+      "[2023-08-22 20:45:21,528: INFO: __init__: Directory created at: artifacts/models]\n",
+      "[2023-08-22 20:45:33,707: INFO: 2582078224: Saving preprocessor pickle file at artifacts/models/Preprocessor.pkl]\n"
      ]
     }
    ],
@@ -206,7 +264,7 @@
     "    config = ConfigurationManager()\n",
     "    data_transformation_config = config.get_data_transformation_config()\n",
     "    data_transformation = DataTransformation(config=data_transformation_config)\n",
-    "    data_transformation.convert()\n",
+    "    data_transformation.initiate_data_transformation()\n",
     "except Exception as e:\n",
     "    raise e"
    ]
