--- a/notebooks/model_trainer.ipynb
+++ b/notebooks/model_trainer.ipynb
@@ -42,7 +42,9 @@
     "@dataclass(frozen=True)\n",
     "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
-    "    data_path: Path\n",
+    "    train_path: Path\n",
+    "    test_path: Path\n",
+    "    preprocessor_model_path: Path\n",
     "    model_path:Path"
    ]
   },
@@ -80,7 +82,9 @@
     "\n",
     "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            data_path=config.data_path,\n",
+    "            train_path=config.train_path,\n",
+    "            test_path=config.test_path,\n",
+    "            preprocessor_model_path=config.preprocessor_model_path,\n",
     "            model_path=config.model_path\n",
     "        )\n",
     "\n",
@@ -97,14 +101,10 @@
     "from src.logging import logger\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import pickle\n",
     "\n",
-    "from sklearn.metrics import r2_score,mean_absolute_error,mean_squared_error\n",
-    "\n",
-    "scaler=StandardScaler()\n"
+    "from sklearn.metrics import r2_score,mean_absolute_error,mean_squared_error\n"
    ]
   },
   {
@@ -118,14 +118,21 @@
     "        self.config = config\n",
     "        \n",
     "    def initiate_model_training(self):\n",
-    "        data = pd.read_csv(self.config.data_path)\n",
-    "        X = data.drop('Time_taken(min)', axis = 1)\n",
-    "        y = data['Time_taken(min)'] \n",
+    "        train = pd.read_csv(self.config.train_path)\n",
+    "        test = pd.read_csv(self.config.test_path)\n",
     "        \n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "        X_train = train.drop('Time_taken(min)', axis = 1)\n",
+    "        X_test = test\n",
+    "        y_train = train['Time_taken(min)']\n",
     "        \n",
-    "        X_train = scaler.fit_transform(X_train)\n",
-    "        X_test = scaler.transform(X_test)\n",
+    "        preprocessor_path = self.config.preprocessor_model_path\n",
+    "        \n",
+    "        with open(preprocessor_path, 'rb') as file:\n",
+    "            preprocessor = pickle.load(file)\n",
+    "            \n",
+    "        \n",
+    "        X_train = preprocessor.fit_transform(X_train)\n",
+    "        X_test = preprocessor.transform(X_test)\n",
     "        \n",
     "        \n",
     "        rf = RandomForestRegressor()\n",
@@ -133,6 +140,8 @@
     "        rf.fit(X_train, y_train)\n",
     "        \n",
     "        rf_model = self.config.model_path\n",
+    "        \n",
+    "        logger.info(f\"Saving model.pkl file at {rf_model}\")\n",
     "        \n",
     "        with open(rf_model, 'wb') as file:\n",
     "            pickle.dump(rf, file)\n",
@@ -148,10 +157,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-08-21 14:24:50,985: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
-      "[2023-08-21 14:24:50,987: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
-      "[2023-08-21 14:24:50,989: INFO: __init__: Directory created at: artifacts]\n",
-      "[2023-08-21 14:24:50,989: INFO: __init__: Directory created at: artifacts/models]\n"
+      "[2023-08-22 20:57:57,976: INFO: __init__: yaml_file: config\\config.yaml loaded succesfully...]\n",
+      "[2023-08-22 20:57:57,979: INFO: __init__: yaml_file: params.yaml loaded succesfully...]\n",
+      "[2023-08-22 20:57:57,980: INFO: __init__: Directory created at: artifacts]\n",
+      "[2023-08-22 20:57:57,981: INFO: __init__: Directory created at: artifacts/models]\n"
      ]
     }
    ],
