prediction and htmls

--- a/notebooks/trials.ipynb
+++ b/notebooks/trials.ipynb
@@ -1,5 +1,54 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "t = pd.read_csv(r\"E:\\Food_Delivery\\artifacts\\data_ingestion\\Final_train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Delivery_person_Age': 33.0,\n",
+       " 'Delivery_person_Ratings': 4.3,\n",
+       " 'Weatherconditions': 'Windy',\n",
+       " 'Road_traffic_density': 'Jam ',\n",
+       " 'Vehicle_condition': 2.0,\n",
+       " 'Type_of_order': 'Meal ',\n",
+       " 'Type_of_vehicle': 'scooter ',\n",
+       " 'multiple_deliveries': 1.0,\n",
+       " 'Festival': 'No ',\n",
+       " 'City': 'Metropolitian ',\n",
+       " 'Time_taken(min)': 39.0,\n",
+       " 'Distance': 20.140905255245308}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.iloc[22].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
