--- a/notebooks/trials.ipynb
+++ b/notebooks/trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "Metropolitian     34093\n",
+       "Urban             10136\n",
+       "Semi-Urban          164\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t['City'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +56,7 @@
        " 'Distance': 20.140905255245308}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,6 +64,168 @@
    "source": [
     "t.iloc[22].to_dict()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cust_data = [{'Delivery_person_Age': 24,\n",
+    "            'Delivery_person_Ratings': 5,\n",
+    "            'Weatherconditions': 'Sunny',\n",
+    "            'Road_traffic_density': 'Low ',\n",
+    "            'Vehicle_condition': 1,\n",
+    "            'Type_of_order': 'Buffet ',\n",
+    "            'Type_of_vehicle': 'scooter', \n",
+    "            'multiple_deliveries': 0,\n",
+    "            'Festival': 'No ',\n",
+    "            'City': 'Metropolitan',\n",
+    "            'Distance': 6\n",
+    "            }]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Delivery_person_Age</th>\n",
+       "      <th>Delivery_person_Ratings</th>\n",
+       "      <th>Weatherconditions</th>\n",
+       "      <th>Road_traffic_density</th>\n",
+       "      <th>Vehicle_condition</th>\n",
+       "      <th>Type_of_order</th>\n",
+       "      <th>Type_of_vehicle</th>\n",
+       "      <th>multiple_deliveries</th>\n",
+       "      <th>Festival</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Sunny</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Buffet</td>\n",
+       "      <td>scooter</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Metropolitan</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Delivery_person_Age  Delivery_person_Ratings Weatherconditions  \\\n",
+       "0                   24                        5             Sunny   \n",
+       "\n",
+       "  Road_traffic_density  Vehicle_condition Type_of_order Type_of_vehicle  \\\n",
+       "0                 Low                   1       Buffet          scooter   \n",
+       "\n",
+       "   multiple_deliveries Festival          City  Distance  \n",
+       "0                    0      No   Metropolitan         6  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = pd.DataFrame.from_dict(cust_data)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocessor = pickle.load(open(r\"E:\\Food_Delivery\\artifacts\\models\\Preprocessor.pkl\", 'rb'))\n",
+    "model = pickle.load(open(r\"E:\\Food_Delivery\\artifacts\\models\\DeliveryModel.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cd = preprocessor.transform(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.25"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre = model.predict(cd)\n",
+    "pre[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
